# ANIMAL

./: .gitignore  CAPGMathConfig.cmake.in  CMakeLists.txt  readme.org
src/: CMakeLists.txt  DLLDefine.h  maths.h
src/include/math/: SAxisAlignedBox.h  SCubicSpline.h  SEuler.h  SMath.h  SQuaternion.h  SVector2.h  SVector3.h
src/maths/: SAxisAlignedBox.h  SBoundingSphere.cpp  SBoundingSphere.h  SCubicSpline.cpp  SCubicSpline.h  SEuler.cpp  SEuler.h  SMath.cpp  SMath.h  SMathHeader.h  SMatrix3.cpp  SMatrix3.h  SMatrix4.cpp  SMatrix4.h  SPlane.cpp  SPlane.h  SPlaneBoundedVolume.cpp  SPlaneBoundedVolume.h  SQuaternion.cpp  SQuaternion.h  SRay.cpp  SRay.h  SVector2.cpp  SVector2.h  SVector3.cpp  SVector3.h  SVector4.cpp  SVector4.h
